Hide help button on smaller screens due to issues with mobile

--- a/src/components/crosswords/CrosswordPowerUps.css
+++ b/src/components/crosswords/CrosswordPowerUps.css
@@ -1,3 +1,9 @@
+@media (max-width: 1000px) {
+  .helpBtn {
+    display: none;
+  }
+}
+
 .crosswordPowerUps {
   display: flex;
   justify-content: space-around;
